@@ -24,8 +24,8 @@
    <QPG:Values>
       <QPG:Files>
          <QPG:Add file="./COPYING" install="LicenseUrl/" handling="repdata"/>
-         <QPG:Add permissions="0755" file="./src/.libs/libadplug-1.5.so" install="/opt/lib/"/>
-         <QPG:Add filetype="symlink" file="libadplug.so" install="/opt/lib/" linkto="libadplug-1.5.so"/>
+         <QPG:Add permissions="0755" file="./src/.libs/libadplug-1.5.so.0" install="/opt/lib/"/>
+         <QPG:Add filetype="symlink" file="libadplug.so.0" install="/opt/lib/" linkto="libadplug-1.5.so.0"/>
          <QPG:Add permissions="0644" file="./src/.libs/libadplug.a" install="/opt/lib/"/>
          <QPG:Add permissions="0644" file="./AUTHORS" install="/usr/doc/libadplug/"/>
          <QPG:Add permissions="0644" file="./BUGS" install="/usr/doc/libadplug/"/>
