@@ -13,13 +13,13 @@ diskopl.obj database.obj player.obj players.obj fprovide.obj protrack.obj &
 a2m.obj hsc.obj imf.obj sng.obj amd.obj d00.obj dfm.obj hsp.obj ksm.obj &
 mid.obj mkj.obj mtk.obj rad.obj raw.obj s3m.obj sa2.obj bam.obj xad.obj &
 mad.obj fmc.obj bmf.obj flash.obj hybrid.obj hyp.obj psi.obj rat.obj lds.obj &
-adtrack.obj cff.obj dtm.obj dmo.obj u6m.obj rol.obj
+adtrack.obj cff.obj dtm.obj dmo.obj u6m.obj rol.obj xsm.obj
 
 include_INST = protrack.h a2m.h amd.h d00.h dfm.h hsc.h hsp.h imf.h ksm.h &
 mid.h mkj.h mtk.h rad.h raw.h s3m.h sa2.h sng.h bam.h xad.h mad.h fmc.h &
 bmf.h flash.h hybrid.h hyp.h psi.h rat.h adplug.h emuopl.h fmopl.h realopl.h &
 analopl.h diskopl.h player.h opl.h silentopl.h lds.h adtrack.h cff.h dtm.h &
-dmo.h u6m.h rol.h database.h fprovide.h players.h
+dmo.h u6m.h rol.h database.h fprovide.h players.h xsm.h
 
 lib_INST = adplug.lib
 
