@@ -59,6 +59,7 @@
 #include "lds.h"
 #include "u6m.h"
 #include "rol.h"
+#include "xsm.h"
 
 /***** Defines *****/
 
@@ -100,6 +101,7 @@ const CPlayerDesc CAdPlug::allplayers[] = {
   CPlayerDesc(CldsLoader::factory, "Loudness", ".lds\0"),
   CPlayerDesc(Cu6mPlayer::factory, "Ultima 6 Music", ".m\0"),
   CPlayerDesc(CrolPlayer::factory, "Adlib Visual Composer", ".rol\0"),
+  CPlayerDesc(CxsmPlayer::factory, "eXtra Simple Music", ".xsm\0"),
   CPlayerDesc()
 };
 
